packages/jsts/tests/dbd/benchmark/TypeError/T11 X is not a constructor/T11-01/reproducer.js
const { CanvasRenderService } = require('./dep'); // fixture

function foo() {
  this.width = 42;
  this.height = 42;
  const chartCallback = () => {};

  const canvas = new CanvasRenderService(this.width,this.height,chartCallback); // Noncompliant: constructor name changed between major versions
}

foo();
